--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,10 @@ concurrency:
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pages: write
+      id-token: write
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -34,7 +38,8 @@ jobs:
       - name: Build
         run: npm run build
         env:
-          GITHUB_PAGES: true
+          GITHUB_PAGES: 'true'
+          GITHUB_ACTIONS: 'true'
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
@@ -43,6 +48,14 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           path: './dist'
+      
+      - name: List dist contents
+        run: |
+          echo "📦 Contents of dist folder:"
+          ls -la dist/ || echo "dist folder not found"
+          echo ""
+          echo "📄 index.html check:"
+          cat dist/index.html | head -20 || echo "index.html not found"
 
   deploy:
     environment:
